fixed some responsive issues with nav collapse

--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -198,7 +198,6 @@ justify-content: space-between;
     nav 
     {
         width: 70px;
-        cursor: pointer;
         /* transition: width 0.9s ease */
     }
     nav.expanded
